[package]
name = "listthedocs-cli"
version = "0.1.0"
authors = ["crash-g <g.muciaccia@camlintechnologies.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
minreq = { version = "2.1", features = ["json-using-serde"] }
structopt = "0.3"

[lib]
name = "listthedocs_lib"
path = "src/lib.rs"

[[bin]]
name = "listthedocs"
path = "src/main.rs"